[package]
name = "Rust_Syn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored="1.7.1"
serde_yaml = "0.8"
actix-web = "3"
rand = "0.8.4"
mysql = "20.0.1"
ws = "0.9.2"
rust-crypto = "0.2.36"
tokio = "1.12.0"
rocket = "=0.5.0-rc.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
parking_lot = "0.11"
urlencoding = "1.0"
md5 = "0.7.0"
hex = "0.4"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rustyline = "12.0.0"
chrono = "0.4"
ring = "0.16.20"

base64 = "0.13.0"
block-modes = "0.9.1"
block-cipher = "0.99.99"
regex = "1.4.2"

rand_core = { version = "0.6", features = ["std"] }
cbc = "0.1.2"
aes = "0.8"
